# RepoGuardian-AI

./: README.md  anna.md
.github/workflows/: anna-app-publish.yml  build-release.yml  build-repoguardian-scanner-binary.yml
examples/anna-app-repoguardian-ai/: .gitignore  DEPLOY.md  README.md  app.json  manifest.json  package-lock.json  package.json  playwright.config.cjs
examples/anna-app-repoguardian-ai/agent/: SKILL.md
examples/anna-app-repoguardian-ai/bundle/: app.js  index.html  style.css
examples/anna-app-repoguardian-ai/executas/repoguardian-scanner/: executa.json  package_binary.py  pyproject.toml  repoguardian_scanner.py
examples/anna-app-repoguardian-ai/fixtures/: happy-path.jsonl
examples/anna-app-repoguardian-ai/tests/bundle/: app.spec.ts
examples/anna-app-repoguardian-ai/tests/e2e/: repoguardian-ui.spec.cjs
examples/anna-app-repoguardian-ai/tests/plugin/: test_scanner_contract.py
