[project]
name = "tool-test-repoguardian-scanner-12345678"
version = "0.1.1"
description = "RepoGuardian AI scanner Executa for Anna Apps."
requires-python = ">=3.11"
authors = [{ name = "Anna Developer" }]
license = { text = "MIT" }
dependencies = [
    "executa-sdk>=0.1.0"
]

[project.scripts]
"tool-test-repoguardian-scanner-12345678" = "repoguardian_scanner:main"

[tool.uv.sources]
executa-sdk = { path = "../../../../sdk/python", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["repoguardian_scanner.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
